# caddybot

./: .gitignore  .gitmodules  README.md
src/: .gitignore
src/caddybot/: CMakeLists.txt  package.xml
src/caddybot/config/: tracker.yaml  zone.yaml
src/caddybot/launch/: bringup.py  fake_gps.py  fake_lidar.py  gps.py  lidar.py  map.py  mcu.py  navigator.py  positioner.py  sound.py  tracker.py  zone.py
src/caddybot_actuator/: package.xml  setup.cfg  setup.py
src/caddybot_actuator/caddybot_actuator/: actuator.py
src/caddybot_gps/: package.xml  setup.cfg  setup.py
src/caddybot_gps/caddybot_gps/: fake_gps.py  gps.py  utm.py
src/caddybot_led/: package.xml  setup.cfg  setup.py
src/caddybot_led/caddybot_led/: led.py
src/caddybot_lidar/: setup.cfg
src/caddybot_lidar/caddybot_lidar/: package.xml  setup.py
src/caddybot_map/: package.xml  setup.cfg  setup.py
src/caddybot_map/caddybot_map/: map.py
src/caddybot_mcu/: CMakeLists.txt  package.xml
src/caddybot_mcu/src/: main.c
src/caddybot_mode/: package.xml  setup.cfg  setup.py
src/caddybot_mode/caddybot_mode/: mode.py
src/caddybot_msgs/: CMakeLists.txt  package.xml
src/caddybot_msgs/msg/: Object.msg  ObjectArray.msg  Region.msg  RegionArray.msg  Velocity.msg
src/caddybot_msgs/srv/: GetMode.srv  GetZone.srv
src/caddybot_navigator/: package.xml  setup.cfg  setup.py
src/caddybot_navigator/caddybot_navigator/: navigator.py
src/caddybot_positioner/: package.xml  setup.cfg  setup.py
src/caddybot_positioner/caddybot_positioner/: positioner.py
src/caddybot_sound/: package.xml  setup.cfg  setup.py
src/caddybot_sound/caddybot_sound/: sound_manager.py
src/caddybot_tracker/: package.xml  setup.cfg  setup.py
src/caddybot_tracker/caddybot_tracker/: avg.py  pov.py  segmenter.py  tracker.py
src/caddybot_zone/: package.xml  setup.cfg  setup.py
src/caddybot_zone/caddybot_zone/: zone.py  zone_controller.py
src/caddybot_zone/map/: sample.json
(+1 files in other folders)
